# ALTO

./: .env.example  .gitignore  DEVELOPER.md  PROJECT_HANDOFF.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  调研报告_构式语法计算学习与多层融合架构.md
scripts/: run.py  start.bat  start.sh  test_backend.py  test_connection.py
src/alto/: __init__.py  app.py  config.py  engine.py  models.py
src/alto/agents/: __init__.py  dialogue.py  orchestrator.py  pedagogical.py
src/alto/construction/: __init__.py
src/alto/conversation/: __init__.py  context.py  prompt_builder.py
src/alto/memory/: __init__.py  declarative.py  procedural.py  working.py
src/alto/neuro_symbolic/: __init__.py  diagnostic.py
