[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "alto"
version = "0.1.0"
description = "ALTO — Adaptive Learning Tutor Orchestrator. A neuro-symbolic, multi-layer language tutoring system"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "openai>=1.0",
    "spacy>=3.7",
    "numpy>=1.26",  # 1.26+ required for Python 3.12 compatibility
    "typer>=0.9",
    "rich>=13.0",
    "python-dotenv>=1.0",
    "streamlit>=1.30",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "black>=23.0",
    "ruff>=0.1",
    "mypy>=1.5",
]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
strict = true
python_version = "3.10"
